kubernetes/kyverno/cluster-policies/require-gitops-annotations.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-gitops-annotations
  annotations:
    policies.kyverno.io/title: "Require GitOps Annotations"
    policies.kyverno.io/category: "Governance"
    policies.kyverno.io/severity: "medium"
    policies.kyverno.io/subject: "Deployment"
    policies.kyverno.io/description: "Every deployment must have an ArgoCD tracking ID annotation"
    argocd.argoproj.io/tracking-id: "require-gitops-annotations"
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-argocd-annotation
      match:
        resources:
          kinds:
            - Deployment
            - StatefulSet
            - DaemonSet
      exclude:
        resources:
          namespaces:
            - kube-system
            - kyverno
            - falco
            - atlantis
            - argocd
            - external-secrets
      validate:
        message: "ArgoCD tracking ID annotation is required."
        pattern:
          metadata:
            annotations:
              argocd.argoproj.io/tracking-id: "?*"
