kubernetes/kyverno/cluster-policies/require-resource-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-limits
  annotations:
    policies.kyverno.io/title: "Require Resource Limits"
    policies.kyverno.io/category: "Best Practices"
    policies.kyverno.io/severity: "high"
    policies.kyverno.io/subject: "Pod"
    policies.kyverno.io/description: "CPU and memory limits are mandatory for all containers"
    argocd.argoproj.io/tracking-id: "require-resource-limits"
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-resources
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - kube-system
            - kyverno
            - falco
            - atlantis
            - argocd
            - external-secrets
      validate:
        message: "CPU and memory limits are required."
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    memory: "?*"
                    cpu: "?*"
                  requests:
                    memory: "?*"
                    cpu: "?*"
