kubernetes/kyverno/cluster-policies/restrict-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-image-registries
  annotations:
    policies.kyverno.io/title: "Restrict Image Registries"
    policies.kyverno.io/category: "Security"
    policies.kyverno.io/severity: "critical"
    policies.kyverno.io/subject: "Pod"
    policies.kyverno.io/description: "Only allow images from private ECR registry"
    argocd.argoproj.io/tracking-id: "restrict-image-registries"
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: validate-ecr-registry
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - kube-system
            - kyverno
            - falco
            - atlantis
            - argocd
            - external-secrets
      validate:
        message: "Only images from the private ECR registry are allowed."
        pattern:
          spec:
            containers:
              - image: "*.dkr.ecr.*.amazonaws.com/*"
            initContainers:
              - image: "*.dkr.ecr.*.amazonaws.com/*"
